xong phần FE cho  admin, common, manager

--- a/public/pages/admin/components/home.html
+++ b/public/pages/admin/components/home.html
@@ -1,4 +1,10 @@
 <div>
     <h1>Welcome Back!</h1>
     <p>This is the admin home page.</p>
+    <div class = "resident-dashboard">
+    <h3>Hộ khẩu & Nhân khẩu</h3>
+    </div>
+    <div class = "nvh-dashboard">
+    <h3>Nhà văn hóa</h3>
+    </div>
 </div>
