--- a/public/pages/admin/components/resident.html
+++ b/public/pages/admin/components/resident.html
@@ -1,6 +1,21 @@
 <div class = "resident-table">
-    <h2>Resident Mangement</h2>
+    <h2>Danh sách Quản lý Hộ khẩu</h2>
+    <div class = "search">
+        <input type="text" placeholder="Tìm kiếm..." />
+        <button>Tìm</button>
+    </div>
     <table>
-        
-    </table>
+        <thead>
+            <tr>
+                <th>Số Hộ Khẩu</th>
+                <th>Chủ Hộ</th>
+                <th>Địa Chỉ Thường Trú</th>
+                <th>Ngày Lập</th>
+                <th>Ghi Chú</th>
+                <th style="text-align: center;">Thao Tác</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+        </table>
 </div>
