--- a/public/pages/admin/components/resident.html
+++ b/public/pages/admin/components/resident.html
@@ -18,7 +18,7 @@
             <table class="data-table">
                 <thead>
                     <tr>
-                        <th>Mã Hộ (Số HK)</th>
+                        <th>Mã Hộ Khẩu (Số HK)</th>
                         <th>Chủ Hộ</th>
                         <th>Địa chỉ thường trú</th>
                         <th>Số thành viên</th>
@@ -66,7 +66,11 @@
         </div>
         <div class="modal-body">
             
-            <div class="household-info">
+            <div class="household-info position-relative">
+                <button class="btn-edit-custom" onclick="openEditHouseholdModal('HK001')">
+                    <i class="fas fa-pen"></i> <span>Sửa thông tin</span>
+                </button>
+            
                 <div class="info-group">
                     <label>Chủ hộ:</label> <span>Nguyễn Văn A</span>
                 </div>
@@ -77,7 +81,6 @@
                     <label>Ngày lập sổ:</label> <span>15/05/2010</span>
                 </div>
             </div>
-
             <div class="member-section">
                 <div class="flex-row-between">
                     <h4><i class="fas fa-users"></i> Danh sách Nhân khẩu</h4>
