Xem chi tiết hộ khẩu

--- a/public/pages/admin/components/resident.html
+++ b/public/pages/admin/components/resident.html
@@ -70,15 +70,15 @@
                 <button class="btn-edit-custom" onclick="openEditHouseholdModal('HK001')">
                     <i class="fas fa-pen"></i> <span>Sửa thông tin</span>
                 </button>
-            
+
                 <div class="info-group">
-                    <label>Chủ hộ:</label> <span>Nguyễn Văn A</span>
+                    <label>Chủ hộ:</label> <span id="detailChuHo">---</span>
                 </div>
                 <div class="info-group">
-                    <label>Địa chỉ:</label> <span>10A, Nguyễn Trãi, P. La Khê, Q. Hà Đông</span>
+                    <label>Địa chỉ:</label> <span id="detailDiaChi">---</span>
                 </div>
                 <div class="info-group">
-                    <label>Ngày lập sổ:</label> <span>15/05/2010</span>
+                    <label>Ngày lập sổ:</label> <span id="detailNgayLap">---</span>
                 </div>
             </div>
             <div class="member-section">
