--- a/public/pages/admin/components/resident.html
+++ b/public/pages/admin/components/resident.html
@@ -298,16 +298,13 @@
         </div>
         <div class="modal-body">
             
-            <div class="household-info position-relative" style="background:#f9fafb; padding:15px; border-radius:6px; margin-bottom:20px;">
-                <button class="btn-edit-custom" onclick="openEditHouseholdModal('HK001')">
-                    <i class="fas fa-pen"></i> <span>Sửa thông tin</span>
-                </button>
+            <div class="household-info" style="background:#f9fafb; padding:15px; border-radius:6px; margin-bottom:20px;">
                 <div class="form-grid-2">
                 <div class="info-group">
-                    <label>Chủ hộ:</label style="font-weight:bold"> <span id="detailChuHo">---</span>
+                    <label style="font-weight:bold">Chủ hộ:</label> <span id="detailChuHo">---</span>
                 </div>
                                 <div class="info-group">
-                    <label>Ngày lập:</label style="font-weight:bold"> <span id="detailNgayLap">---</span>
+                    <label style="font-weight:bold">Ngày lập:</label> <span id="detailNgayLap">---</span>
                 </div>
                 </div>
                 <div style="margin-top:10px" class="info-group">
